refactored mat-select implementation